[gd_scene load_steps=9 format=3 uid="uid://e1mym8owg7vl"]

[ext_resource type="Script" uid="uid://qvb2rnhsffkm" path="res://Actors/Pinball/pinball_ball.gd" id="1_mt5ew"]
[ext_resource type="Texture2D" uid="uid://c7ncm2nan8wqo" path="res://Assets/ball.png" id="2_dsvnb"]
[ext_resource type="Script" uid="uid://hwio3e61ouy1" path="res://Components/gravity_component.gd" id="3_dsvnb"]
[ext_resource type="Script" uid="uid://ccd00snf85m7l" path="res://Components/hurtbox_component.gd" id="4_0lmd5"]
[ext_resource type="Script" uid="uid://dhi7jl4m0bqmc" path="res://Components/hitbox_component.gd" id="5_u8m8f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0lmd5"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jp0kg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u8m8f"]
radius = 8.0

[node name="PinballBall" type="RigidBody2D"]
mass = 0.5
continuous_cd = 1
script = ExtResource("1_mt5ew")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_dsvnb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0lmd5")
debug_color = Color(0.250999, 0.635327, 0, 0.42)

[node name="GravityComponent" type="Node" parent="."]
script = ExtResource("3_dsvnb")
mass = 50
metadata/_custom_type_script = "uid://hwio3e61ouy1"

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("5_u8m8f")
damage = 1
metadata/_custom_type_script = "uid://dhi7jl4m0bqmc"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_jp0kg")
debug_color = Color(0.997056, 0, 0.174189, 0.42)

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("4_0lmd5")
metadata/_custom_type_script = "uid://ccd00snf85m7l"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_u8m8f")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
